first blog draft, needs work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class=" navbar-brand text-secondary  mx-auto" href="#">Grant Harris</a>
+    <a class=" navbar-brand text-secondary  mx-auto text-center" href="https://www.linkedin.com/in/1grantharris1/">Grant Harris</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +27,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog Page</a>
+          <a class="nav-link" href="pages/pages.html">Blog Page</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="#">Portfolio Projects</a>
@@ -45,16 +45,18 @@
   </div>
 </nav>
 </div>
-<div class="card bg-dark text-white">
-  <img src="img/oldowrk.jpeg" class="card-img" alt="...">
+<div class="card bg-dark text-dark">
+  <img src="img/greylex.jpeg" class="card-img" alt="...">
   <div class="card-img-overlay text-center">
-    <h3 class="card-title">Welcome to my portfolio page.</h3>
-    <h6>Please visit my portfolio projects, blog , pictures, and links.</h6>
-    <a href="https://www.linkedin.com/in/1grantharris1/"><img src="img/bestlink.png"></a>
+   
+    <h3 class="card-title">Welcome to my portfolio page.<a href="https://www.linkedin.com/in/1grantharris1/"><img src="img/bestlink.png"></a></h3>
+<br>
+<br>
+<br>
   </div>
 </div>
 <div class="card bg-dark text-white">
-  <img src="img/greylex.jpeg" class="card-img" alt="...">
+  <img src="img/oldowrk.jpeg" class="card-img" alt="...">
   <div class="card-img-overlay">
     <h3 class="card-title">Current Projects:</h3>
     <h6>  "Mind Reading", "Campaign Components","Wireframing"</h6>
@@ -64,9 +66,15 @@
 <div class="card bg-dark text-white">
   <img src="img/thegirls 3.jpeg" class="card-img" alt="...">
   <div class="card-img-overlay">
-    <h3 class="card-title">Current Projects:</h3>
-    <h6>  "Mind Reading", "Campaign Components","Wireframing"</h6>
-    <p class="card-text">Updated Weekly</p>
+    <h3 class="card-title">Current skills:</h3>
+    <br>
+    <br>
+    <br>
+    <h6> HTML, CSS, JavaScript, Bootstrap </h6>
+    <p class="card-text">Please visit my Linked link for more information .
+        <br>
+        <a href="https://www.linkedin.com/in/1grantharris1/"><img src="img/bestlink.png"></a>
+    </p>
   </div>
 </div>
 
