--- a/index.html
+++ b/index.html
@@ -38,47 +38,25 @@
                         <a class="nav-link" href="pages/pages.html">Blog Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Portfolio Projects</a>
+                        <a class="nav-link" href="#projects">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/blog/pages/pics.html">Pictures</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-primary rounded-pill" type="submit">Search</button>
                 </form>
             </div>
         </div>
     </nav>
-    <h1 class="jobname text-center">Web Development</h1>
-    <!-- <div class="card bg-dark text-dark"> -->
-    <!-- <img src="img/greylex.jpeg" class="card-img" alt="..."> -->
-    <!-- <div class="card-img-overlay text-center">
+    <br>
+    <h1 class="jobname text-center">Web Development.</h1>
+    
    
-    <h3 class="card-title">Welcome to my portfolio page.<a href="https://www.linkedin.com/in/1grantharris1/"><img src="img/bestlink.png"></a></h3>
 
-  </div>
-</div>
-<div class="card bg-dark text-white">
-  <! <img src="img/oldowrk.jpeg" class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h3 class="card-title">Current Projects:</h3>
-    <h6 id="projects">  "Mind Reading", "Campaign Components","Wireframing"</h6>
-    <p class="card-text">Updated Weekly</p>
-  </div> -->
-    <!-- </div> -->
-    <!-- <div class="card bg-dark text-white">
-  <img src="img/thegirls 3.jpeg" class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h3 class="card-title">Current skills:</h3>
-    <br>
-    <br>
-    <br>
-    <h6> HTML, CSS, JavaScript, Bootstrap </h6>
-    <p class="card-text">Please visit my Linkedin link for more information .
-        <br>
-        <a href="https://www.linkedin.com/in/1grantharris1/"><img src="img/bestlink.png"></a>
-    </p>
-  </div>
-</div> -->
+
 
     <!-- Optional JavaScript; choose one of the two! -->
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
