--- a/pages/pages.html
+++ b/pages/pages.html
@@ -283,6 +283,32 @@
             <a href="https://github.com/GrantHarris1/weather" class="card-link"><img src="/blog/img/thgit.png"></a>
         </div>
     </div>
+        <!-- WEEK 7 -->
+
+        <div class="card text-center">
+  <div class="card-body cardback">
+    <h5 class="card-title">Week VII</h5>
+    <h6 class="card-subtitle mb-2 text-muted">O.O.P. | Pseudocode | MVC </h6>
+    <p class="card-text">
+        <b>Pseudocode</b><br>
+        Pseudocode is my process of writing code in an "english" form. Code in an easily readable form.
+        Pseudocode should be used to define the functionality, objects, functions, classes, and variables
+        that will be needed to construct my webpage.<br>
+        <b>Pseudocode</b> in OOP is helpful for me to work from "the outside, in". Setting Classes then moving
+        "in" to variables, functions, helper functions, objects, and properties is a great structure form 
+        to work through my functionality, and establish the process of my webpage.<br>
+        <b>Singleton</b> design pattern means there is only one instance of a class. Often, State Objects 
+        are a Singleton instead of glabal to cut down of confusion when many global items will be used.
+        This is abetter structured way of programming when it is applicable. By declaring the constructors of a 
+        class private this implements a "container" for defined access to that class. clearing up space in the global
+        are for only those items necessary.
+</p>
+<hr>
+<p> This Is A Project I Worked On This Week With OOP, MVC , and Singleton.</p>
+    <a href="https://grantharris1.github.io/tTt/" class="card-link"><img src="/blog/img/thgit.png"></a>
+    
+  </div>
+</div>
 
 
 
