--- a/pages/pages.html
+++ b/pages/pages.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="/blog/css/blog.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap');
     </style>
