--- a/pages/pages.html
+++ b/pages/pages.html
@@ -65,7 +65,7 @@
                     These two things are completely new to me. I will also be very excited to learn about styling this
                     blog.
                     My personal Favorite website is: <a href="https://kentuckysportsradio.com"><img
-                            src="/blog/img/ksr2.jpeg"></a>
+                            src="../img/ksr2.jpeg"></a>
                     I am excited for my opportunity in this class, and to add a new valuable skillset.<br>
                 <h4><b>Some things I learned in week one:</b> <br>
                 </h4>
@@ -90,7 +90,7 @@
 
 
                 </p>
-                <a href="https://github.com/GrantHarris1" class="card-link"><img src="/blog/img/thgit.png"></a>
+                <a href="https://github.com/GrantHarris1" class="card-link"><img src="../img/thgit.png"></a>
             </div>
         </div>
 
@@ -128,7 +128,7 @@
                 <hr>
                 <p> My Week II "Progress"</p>
                 <a href="https://github.com/GrantHarris1/web-birdwatching" class="card-link">
-                    <img src="/blog/img/thgit.png">
+                    <img src="../img/thgit.png">
                 </a>
 
             </div>
@@ -170,7 +170,7 @@
                 <hr>
                 </p>
                 <p> My Ealry Progress With JavaScript.</p>
-                <a href="https://github.com/GrantHarris1/silly" class="card-link"><img src="/blog/img/thgit.png"></a>
+                <a href="https://github.com/GrantHarris1/silly" class="card-link"><img src="../img/thgit.png"></a>
 
             </div>
         </div>
@@ -224,7 +224,7 @@
             <p>
                 The JavaScript Project I Completed This Week:
             </p>
-            <a href="https://github.com/GrantHarris1/bouncingBall" class="card-link"><img src="/blog/img/thgit.png"></a>
+            <a href="https://github.com/GrantHarris1/bouncingBall" class="card-link"><img src="../img/thgit.png"></a>
         </div>
     </div>
     <!-- WEEK 5 -->
@@ -250,7 +250,7 @@
             </p>
             <hr>
             <p> My "Campaign" Project From This Week.</p>
-            <a href="https://github.com/GrantHarris1/campaign" class="card-link"><img src="/blog/img/thgit.png"></a>
+            <a href="https://github.com/GrantHarris1/campaign" class="card-link"><img src="../img/thgit.png"></a>
 
         </div>
     </div>
@@ -280,7 +280,7 @@
             </p>
             <hr>
             <p>The Project I Completed Using Axios, JSON, & Calling APIs</p>
-            <a href="https://github.com/GrantHarris1/weather" class="card-link"><img src="/blog/img/thgit.png"></a>
+            <a href="https://github.com/GrantHarris1/weather" class="card-link"><img src="../img/thgit.png"></a>
         </div>
     </div>
         <!-- WEEK 7 -->
@@ -305,7 +305,7 @@
 </p>
 <hr>
 <p> This Is A Project I Worked On This Week With OOP, MVC , and Singleton.</p>
-    <a href="https://grantharris1.github.io/tTt/" class="card-link"><img src="/blog/img/thgit.png"></a>
+    <a href="https://grantharris1.github.io/tTt/" class="card-link"><img src="../img/thgit.png"></a>
     
   </div>
 </div>
