--- a/pages/pics.html
+++ b/pages/pics.html
@@ -55,7 +55,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/blog/img/picspage/selfie copy.jpeg" class="d-block w-100" alt="...">
+                <img src="./img/picspage/selfie copy.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Thank You For Visiting My Page, Please <a href="mailto:grantharriselectric@gmail.com"
                             class="email"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
