--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#projects">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog/pages/pics.html">Pictures</a>
+                        <a class="nav-link" href="../pages/pics.html">Pictures</a>
                     </li>
                 </ul>
                 <form class="d-flex">
