--- a/pages/pages.html
+++ b/pages/pages.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/blog/pages/pics.html">Pictures</a>
+                        <a class="nav-link" href="../pages/pics.html">Pictures</a>
                     </li>
 
                 </ul>
