--- a/pages/pics.html
+++ b/pages/pics.html
@@ -29,7 +29,7 @@
                         <a class="nav-link " aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages.html">Blog Page</a>
+                        <a class="nav-link" href="../pages.html">Blog Page</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Portfolio</a>
