--- a/pages/pages.html
+++ b/pages/pages.html
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages.html">Blog Page</a>
+                        <a class="nav-link" href="#">Blog Page</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/pics.html">Pictures</a>
+                        <a class="nav-link" href="../pages/pics.html">Pictures</a>
                     </li>
 
                 </ul>
