--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="blog/index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/pages.html">Blog Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Portfolio</a>
+                        <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/pics.html">Pictures</a>
