--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-white.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -48,26 +48,27 @@
     -->
     <script type="module">
   // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-analytics.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-analytics.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyDvVi1lEAn6NL-TAusK7VhajxERjOCGZSo",
-    authDomain: "grantharrisportfolio.firebaseapp.com",
-    projectId: "grantharrisportfolio",
-    storageBucket: "grantharrisportfolio.appspot.com",
-    messagingSenderId: "1054018122021",
-    appId: "1:1054018122021:web:b0fa9eef23a6e92b23aacc",
-    measurementId: "G-L3CGSEC20B"
+    apiKey: "AIzaSyBlY2VskpAYxoUPVq9-0R3EvfONBMs_QGg",
+    authDomain: "grant-harris.firebaseapp.com",
+    projectId: "grant-harris",
+    storageBucket: "grant-harris.appspot.com",
+    messagingSenderId: "830625216859",
+    appId: "1:830625216859:web:df93bd7d9ed9e95b46027e",
+    measurementId: "G-K2751EWQ9J"
   };
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+<script src="//embed.typeform.com/next/embed.js"></script>
   </body>
 </html>
